created some DTOs for passing data back and forth
