# src/api/dto/FailResponse.ts
@@ -1,0 +1,13 @@
+import { Entity } from 'typeorm'
+
+@Entity()
+export class FailResponse {
+  constructor(error: string, success = false) {
+    this.success = success
+    this.error = error
+  }
+
+  success: boolean
+
+  error: string
+}
