# src/api/dto/MonsterRequest.ts
@@ -1,0 +1,10 @@
+import { Entity } from 'typeorm'
+
+@Entity()
+export class MonsterRequest {
+  constructor(args: any) {
+    const { monsterId } = args
+    this.monsterId = monsterId
+  }
+  monsterId: number
+}
