# src/api/dto/PetRequest.ts
@@ -1,0 +1,10 @@
+import { Entity } from 'typeorm'
+
+@Entity()
+export class PetRequest {
+  constructor(args: any) {
+    const { name } = args
+    this.name = name
+  }
+  name: string
+}
