# src/api/dto/PlayerRequest.ts
@@ -1,0 +1,14 @@
+import { Entity } from 'typeorm'
+
+@Entity()
+export class PlayerRequest {
+  constructor(args: any) {
+    const { email, password, name } = args
+    this.email = email
+    this.password = password
+    this.name = name
+  }
+  email: string
+  password: string
+  name: string
+}
